@@ -1,5 +1,11 @@
 2014-05-15  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts):
+	Support for the tts:display attribute in ttmlrender. This was already
+	present in ttmlparse.
+
+2014-05-15  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlrender.c: (gst_ttmlrender_render_outline):
 	Enlarge blur temporary surface so the blur radius fits in it (fixes
 	truncated blurs on small fonts)
